--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "/ryanlindman.github.io/#",
+  "homepage": "https://RyanLindman.github.io/ryanlindman.github.io/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
